--- a/page4.html
+++ b/page4.html
@@ -20,7 +20,7 @@
         <img src="kf.PNG">
 
         <p>I am in the school orchestra for 3 years now. I have been playing viola for 5 years, guitar for about 8 years, and learned piano for 2 years when i was younger. I like learning songs on guitar and keyboard on my own and like to play those in my spare time. My friends from a summer band class and I created a band called the Acoustic Potatoes that lasted for about a year in 8th grade and I played guitar. I also was in a summer jazz camp playing guitar. <br><br>
-        I have been in speech and debate for 2.5 years. I have gone to many competitions. I won 3rd in informative speech and original narrative. I got finalist in impromptu speech and non-fiction writing. I won first in Public forum debate(partner debate). I have also particpated in Spontaneous(SPAR) debate and Oratorical Interpretation(Declamation) speech. Besides learning just regular speech and debate, I have learned more about current issues and life communication skills.</p>
+        I have been in speech and debate for 2.5 years. I have gone to many competitions. I won 3rd in informative speech and original narrative. I got finalist in impromptu speech and non-fiction writing. I won first in Public forum debate(partner debate). I have also particpated in Spontaneous(SPAR) debate and Oratorical Interpretation(Declamation) speech. Besides learning just regular speech and debate, I have learned more about current issues and life communication skills. I also have judged at two elementary competitions for Poetry, Spar and Duo Interp.</p>
         <img src="speech.jpg">
   
         <script src="p5.min.js"></script>
