--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>I am a junior at Pasadena High School. I am currently in App Academy learning HTML, CSS and Javascript. Being in the pathway got me interested in majoring in Computer Science, maybe software development or software engineering. I have also been in a small summer class where I learned a bit of Python and Java. In that class, we tried to use Java to create an Android App so that made me interested in software. I enjoy listening to music, <a class="intro" href="page4.html" target="_blank">playing viola, guitar and keyboard, practicing Shaolin Kungfu and speech and debate.(click to learn more) </a></p>
         <div class="container">
         <div class="column" id="col-1"><img src="self.jpg"></div>
-        <div class="column"> <img src="self2.jpg"></div>
+        <div class="column"> <img src="self2.JPG"></div>
         </div>
 
     </body>
